--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@ s0.parentNode.insertBefore(s1,s0);
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Kana Realty </a>
+      <a class="navbar-brand" href="/">Home Value </a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
