--- a/static/styles.css
+++ b/static/styles.css
@@ -27,6 +27,10 @@
 
  .c2 {
  	text-align: center;
+  color: #FF0000; 
+  color: white; 
+
+
  }
 
 body {
@@ -51,24 +55,44 @@ body {
 
 .home {
   background-image: linear-gradient(to top, rgba(0,0,0, 0),
-    rgba(0,0,0, 0)), url('https://ssl.cdn-redfin.com/v252.3.1/images/homepage/banners/genHomepageDesktopBanner/SunnyVideo_Homepage.jpg');
+    rgba(0,0,0, 0)), url('blueSky.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 50vh;
+  height: 60vh;
+  position: relative;
+}
+
+#main-content{
+  background-image:url('2-story.jpg');
+  background-image:url('american.jpg');
+  background-image:url('arc.jpg');
+  background-image:url('2-story.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
   position: relative;
 }
 
 .btnsdiv {
-  width: 90%;
+  width: 40%;
 }
-
+.citynames{
+  position: absolute;
+  top: 80px;
+  display: block;
+  color:white;
+  left: 5%;
+  font-size: 28px;
+  
+}
 .message {
     position: absolute;
     bottom: 3px;
     display: block;
-    color: #b1b1b1;
-    left: 40%;
+    color: black;
+    left: 30%;
     font-size: 16px;
     text-transform: uppercase;
 }
