--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@ s0.parentNode.insertBefore(s1,s0);
       
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
+      <li class="active"><a href="/">Home Value</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="/statistics">Statistics
         <span class="caret"></span></a>
