--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -61,17 +61,17 @@ header.css('background-image', backgrounds[0]);
 	</div> !-->
     
     <div class="citynames">
-        <span>Estimate the value of your home in these cities </span>
+        <span>What will your house cost in </span>
         <ul style="
     list-style-type: none;
-"> <br>
-            <li><a href="/home-info"> <h5 class="c2">  Erinville,Canada </h6> </a></li>
-            <li><a href="/home-info"> <h5 class="c2"> Andrea Land,Oaklahoma </h6> </a></li>
-            <li><a href="/home-info"> <h5 class="c2"> East Lucas,Iowa </h6> </a></li>
-            <li><a href="/home-info"> <h6 class="c2"> Sara ann,W.Virginia </h6> </a></li>
-            <li><a href="/home-info"> <h6 class="c2"> Jonathan Borough, Delaware! </h6></a></li> 
-            <br>
-            <li><a href="/home-info"> <h4 class="c2"> START HERE ! </h4> </a></li>
+"> 
+            <li><a href="/home-info"> <h4 class="c2">  Erinville, Canada </h6> </a></li>
+            <li><a href="/home-info"> <h4 class="c2"> Andrea Land, Oklahoma </h6> </a></li>
+            <li><a href="/home-info"> <h4 class="c2"> East Lucas, Iowa </h6> </a></li>
+            <li><a href="/home-info"> <h4 class="c2"> Sara Ann, West Virginia </h6> </a></li>
+            <li><a href="/home-info"> <h4 class="c2"> Jonathan Borough, Delaware! </h6></a></li> 
+            
+            <li><a href="/home-info"> <h3 class="c2"> START HERE ! </h4> </a></li>
         </ul>
     </div>
        
