--- a/static/styles.css
+++ b/static/styles.css
@@ -42,15 +42,19 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 20px 10% 0 10%;
+  margin: 15px 10% 0 10%;
   background-color: #f3f2f2;
   border-radius: 15px;
   padding: 10px;
 
 }
+#homelink{
+  color: green;
+  text-transform: uppercase;
+}
 
 .homeinfokids{
-  width: 20%;
+  width: 25%;
 }
 
 .home {
