--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -70,9 +70,10 @@ header.css('background-image', backgrounds[0]);
             <li><h4 class="c2"> East Lucas, Iowa </h6> </a></li>
             <li><h4 class="c2"> Sara Ann, West Virginia </h6> </a></li>
             <li><h4 class="c2"> Jonathan Borough, Delaware</h6></a></li> 
-            <li><h4 class="c2"> Cape May, New Jersey </h6></a></li> 
+            <li><h4 class="c2"> Cape May, New Jersey </h6></a></li> <br>
             
-            <li><a href="/home-info"> <h3 class="c2" id="homelink"> Get Estimate </h4> </a></li>
+            <li><button><a href="/home-info"> <b class="c2" id="homelink"> Click Here to Get Estimate </b> </a></button> </li>
+              
         </ul>
     </div>
        
