--- a/templates/base.html
+++ b/templates/base.html
@@ -52,8 +52,8 @@ s0.parentNode.insertBefore(s1,s0);
         <a class="dropdown-toggle" data-toggle="dropdown" href="/statistics">Statistics
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="/pop"> Popularity </a></li>
-          <li><a href="/avg_price"> Average prices </a></li>
+          <li><a href=""> Popularity </a></li>
+          <li><a href=""> Average prices </a></li>
         </ul>
       </li>
   
