commented out bootstrap

--- a/static/styles.css
+++ b/static/styles.css
@@ -182,4 +182,4 @@ body {
 
 
 
-*/ Color line credit to ninjamonk: [[http://bootsnipp.com/snippets/featured/mix-amp-match-login]]
+/* Color line credit to ninjamonk: [[http://bootsnipp.com/snippets/featured/mix-amp-match-login]]*/
