--- a/templates/home_info.html
+++ b/templates/home_info.html
@@ -69,7 +69,7 @@
 		<div class="homeinfokids btnsdiv">
 
 			
-            <input type="reset" value="CLEAR CITY">
+            <input type="reset" value="CLEAR ">
 
 			<input type="submit" value="SUBMIT FORM">
 
