--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -61,7 +61,7 @@ header.css('background-image', backgrounds[0]);
 	</div> !-->
     
     <div class="citynames">
-        <span>Estimate the value of your home in </span>
+        <span>Let Zyzy Estimate the value of your home in </span>
         <ul style="
     list-style-type: none;
 "> 
